--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "3.0.0-beta.4",
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "cypress"
   ],
   "license": "AGPL-3.0",
   "repository": {
@@ -58,6 +59,9 @@
     "prisma:setup": "npm run -w packages/prisma prisma:setup",
     "prisma:migrate": "npm run -w packages/prisma prisma:migrate",
     "prisma:reset": "npm run -w packages/prisma prisma:reset"
+  },
+  "dependencies": {
+    "@uzh-bf/design-system": "2.0.7"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "4.14.1",
