--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -15,7 +15,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.0.0",
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
     "cross-env": "7.0.3",
@@ -32,7 +32,7 @@
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@uzh-bf/design-system": "2.0.6",
+    "@uzh-bf/design-system": "2.0.7",
     "bcryptjs": "2.4.3",
     "jsonwebtoken": "9.0.1",
     "next": "13.4.13",
@@ -44,5 +44,8 @@
   },
   "volta": {
     "extends": "../../package.json"
+  },
+  "engines": {
+    "node": "=18"
   }
 }
