--- a/apps/backend-docker/Dockerfile
+++ b/apps/backend-docker/Dockerfile
@@ -1,48 +1,52 @@
-# Install dependencies only when needed
-FROM node:18-alpine AS deps
-
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
-
-WORKDIR /app
-
-COPY package.json ./
-
-RUN npm install
-
-
-# Rebuild the source code only when needed
-FROM node:18-alpine AS builder
-
-WORKDIR /app
+FROM docker.io/library/node:18-alpine AS base
 
 ARG NODE_ENV production
 ENV NODE_ENV $NODE_ENV
 
-COPY --from=deps /app/node_modules ./node_modules
+FROM base AS builder
+WORKDIR /app
+
+RUN apk add --no-cache libc6-compat
+RUN apk update
+
+RUN npm i -g pnpm@8.6.12 turbo@1.10.12
+
 COPY . .
 
-RUN npm run build && npm prune --omit dev
+RUN turbo prune --scope=@klicker-uzh/backend-docker --docker
 
 
-# Production image, copy all the files and run next
-FROM node:18-alpine AS runner
-
+FROM base AS installer
 WORKDIR /app
 
-ARG NODE_ENV production
-ENV NODE_ENV $NODE_ENV
+RUN apk add --no-cache libc6-compat
+RUN apk update
+
+RUN npm i -g pnpm@8.6.12 turbo@1.10.12
+
+COPY --from=builder /app/out/json/ .
+COPY --from=builder /app/out/pnpm* .
+
+RUN pnpm i --frozen-lockfile
+
+ARG NODE_ENV="production"
+
+COPY --from=builder /app/out/full/ .
+RUN pnpm run build --filter=@klicker-uzh/backend-docker
+
+
+FROM base AS runner
+WORKDIR /app
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nodejs
+USER nodejs
 
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
 
-USER nodejs
+ARG NODE_ENV="production"
 
 EXPOSE 3000
 
-ENV PORT 3000
-
-CMD ["node", "dist/index.js"]
+CMD node apps/backend-docker/dist/index.js
