--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -17,25 +17,25 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.14",
-    "@fortawesome/fontawesome-svg-core": "6.4.0",
-    "@fortawesome/free-regular-svg-icons": "6.4.0",
-    "@fortawesome/free-solid-svg-icons": "6.4.0",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-regular-svg-icons": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
-    "@sentry/nextjs": "7.52.1",
+    "@sentry/nextjs": "7.61.1",
     "@socialgouv/matomo-next": "1.6.1",
-    "@uzh-bf/design-system": "2.0.6",
+    "@uzh-bf/design-system": "2.0.7",
     "body-parser": "1.20.2",
     "cross-env": "7.0.3",
-    "dayjs": "1.11.7",
+    "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
-    "formik": "2.4.2",
+    "formik": "2.4.3",
     "graphql": "16.6.0",
     "graphql-ws": "5.13.1",
-    "jsonwebtoken": "9.0.0",
+    "jsonwebtoken": "9.0.1",
     "localforage": "1.10.0",
     "next": "13.4.13",
     "next-intl": "2.19.1",
@@ -44,9 +44,9 @@
     "ramda": "0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "0.32.1",
-    "tailwind-merge": "1.12.0",
-    "yup": "1.1.1"
+    "sharp": "0.32.4",
+    "tailwind-merge": "1.14.0",
+    "yup": "1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.4.2",
@@ -58,7 +58,6 @@
     "@types/ramda": "^0.29.3",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
-    "@types/sharp": "^0.32.0",
     "@types/web-push": "^3.3.2",
     "autoprefixer": "10.4.14",
     "babel-loader": "8.2.5",
@@ -69,7 +68,7 @@
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
     "prettier-plugin-tailwindcss": "0.3.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.4"
@@ -78,6 +77,6 @@
     "extends": "../../package.json"
   },
   "engines": {
-    "node": ">=16"
+    "node": "=18"
   }
 }
