--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -17,20 +17,20 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.14",
-    "@fortawesome/fontawesome-svg-core": "6.4.0",
-    "@fortawesome/free-regular-svg-icons": "6.4.0",
-    "@fortawesome/free-solid-svg-icons": "6.4.0",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-regular-svg-icons": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
     "@socialgouv/matomo-next": "1.6.1",
-    "@uzh-bf/design-system": "2.0.6",
+    "@uzh-bf/design-system": "2.0.7",
     "d3": "7.8.4",
-    "dayjs": "1.11.7",
+    "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
-    "formik": "2.4.2",
+    "formik": "2.4.3",
     "graphql": "16.6.0",
     "graphql-ws": "5.13.1",
     "is-hotkey": "0.2.0",
@@ -52,12 +52,12 @@
     "react-tagcloud": "2.3.1",
     "recharts": "2.6.2",
     "remark-slate": "1.8.6",
-    "sharp": "0.32.1",
+    "sharp": "0.32.4",
     "slate": "0.94.1",
     "slate-history": "0.93.0",
     "slate-react": "0.94.2",
-    "tailwind-merge": "1.12.0",
-    "yup": "1.1.1"
+    "tailwind-merge": "1.14.0",
+    "yup": "1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.4.2",
@@ -71,7 +71,6 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-tagcloud": "^1.1.7",
-    "@types/sharp": "^0.32.0",
     "autoprefixer": "10.4.14",
     "babel-loader": "8.2.5",
     "cssnano": "6.0.1",
@@ -81,7 +80,7 @@
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
     "prettier-plugin-tailwindcss": "0.3.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "typescript": "5.0.4"
   },
@@ -89,6 +88,6 @@
     "extends": "../../package.json"
   },
   "engines": {
-    "node": ">=16"
+    "node": "=18"
   }
 }
