--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -20,9 +20,9 @@
   "dependencies": {
     "@apollo/client": "3.7.14",
     "@bigheads/core": "0.3.3",
-    "@fortawesome/fontawesome-svg-core": "6.4.0",
-    "@fortawesome/free-regular-svg-icons": "6.4.0",
-    "@fortawesome/free-solid-svg-icons": "6.4.0",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-regular-svg-icons": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
@@ -30,14 +30,14 @@
     "@klicker-uzh/shared-components": "workspace:*",
     "@radix-ui/react-tabs": "1.0.3",
     "@socialgouv/matomo-next": "1.6.1",
-    "@uzh-bf/design-system": "2.0.6",
+    "@uzh-bf/design-system": "2.0.7",
     "body-parser": "1.20.2",
-    "dayjs": "1.11.7",
+    "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
-    "formik": "2.4.2",
+    "formik": "2.4.3",
     "graphql": "16.6.0",
     "graphql-ws": "5.13.1",
-    "jsonwebtoken": "9.0.0",
+    "jsonwebtoken": "9.0.1",
     "localforage": "1.10.0",
     "next": "13.4.13",
     "next-intl": "2.19.1",
@@ -48,22 +48,21 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "2.6.2",
-    "sharp": "0.32.1",
-    "tailwind-merge": "1.12.0",
-    "yup": "1.1.1"
+    "sharp": "0.32.4",
+    "tailwind-merge": "1.14.0",
+    "yup": "1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "0.5.9",
     "@types/body-parser": "^1.19.2",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.17.3",
     "@types/object-hash": "^3.0.2",
-    "@types/ramda": "^0.29.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/sharp": "^0.32.0",
+    "@types/ramda": "^0.29.3",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/web-push": "^3.3.2",
     "autoprefixer": "10.4.14",
     "babel-loader": "8.2.5",
@@ -74,7 +73,7 @@
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
     "prettier-plugin-tailwindcss": "0.3.0",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.4",
@@ -84,6 +83,6 @@
     "extends": "../../package.json"
   },
   "engines": {
-    "node": ">=16"
+    "node": "=18"
   }
 }
