--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,74 +55,78 @@ services:
     networks:
       - klicker
 
-# frontend-pwa:
-#   profiles:
-#     - full
-#   build:
-#     context: apps/frontend-pwa
-#     args:
-#       NODE_ENV: development
-#       COOKIE_DOMAIN: 127.0.0.1
-#       NEXT_PUBLIC_ADD_RESPONSE_URL: 'http://127.0.0.1:7072/api/AddResponse'
-#       NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-#       NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
-#   environment:
-#     APP_SECRET: abcd
-#   ports:
-#     - 3001:3000
-#   networks:
-#     - klicker
+  frontend_pwa:
+    profiles:
+      - full
+    build:
+      context: .
+      dockerfile: apps/frontend-pwa/Dockerfile
+      args:
+        NODE_ENV: development
+        COOKIE_DOMAIN: 127.0.0.1
+        NEXT_PUBLIC_ADD_RESPONSE_URL: 'http://127.0.0.1:7072/api/AddResponse'
+        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
+        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+    environment:
+      APP_SECRET: abcd
+    ports:
+      - 3001:3000
+    networks:
+      - klicker
 
-# frontend-manage:
-#   profiles:
-#     - full
-#   build:
-#     context: apps/frontend-manage
-#     args:
-#       NODE_ENV: development
-#       COOKIE_DOMAIN: 127.0.0.1
-#       NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-#       NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
-#   ports:
-#     - 3002:3000
-#   networks:
-#     - klicker
+  frontend_manage:
+    profiles:
+      - full
+    build:
+      context: .
+      dockerfile: apps/frontend-manage/Dockerfile
+      args:
+        NODE_ENV: development
+        COOKIE_DOMAIN: 127.0.0.1
+        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
+        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+    ports:
+      - 3002:3000
+    networks:
+      - klicker
 
-# frontend-control:
-#   profiles:
-#     - full
-#   build:
-#     context: apps/frontend-control
-#     args:
-#       NODE_ENV: development
-#       COOKIE_DOMAIN: 127.0.0.1
-#       NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
-#       NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
-#   ports:
-#     - 3003:3000
-#   networks:
-#     - klicker
+  frontend_control:
+    profiles:
+      - full
+    build:
+      context: .
+      dockerfile: apps/frontend-control/Dockerfile
+      args:
+        NODE_ENV: development
+        COOKIE_DOMAIN: 127.0.0.1
+        NEXT_PUBLIC_API_URL: 'http://127.0.0.1:3000/api/graphql'
+        NEXT_PUBLIC_API_URL_SSR: 'http://backend:3000/api/graphql'
+    ports:
+      - 3003:3000
+    networks:
+      - klicker
 
-# backend:
-#   profiles:
-#     - full
-#   build:
-#     context: apps/backend-docker
-#     args:
-#       NODE_ENV: 'development'
-#   environment:
-#     DATABASE_URL: 'postgres://klicker:klicker@postgres:5432/main'
-#     APP_SECRET: 'abcd'
-#     REDIS_HOST: 'redis_exec'
-#     REDIS_PORT: 6379
-#     REDIS_CACHE_HOST: 'redis_cache'
-#     REDIS_CACHE_PORT: 6379
-#     API_DOMAIN: '127.0.0.1'
-#     COOKIE_DOMAIN: '127.0.0.1'
-#   ports:
-#     - 3000:3000
-#   networks:
-#     - klicker-dev
+  backend:
+    profiles:
+      - full
+    build:
+      context: .
+      dockerfile: apps/backend-docker/Dockerfile
+      args:
+        NODE_ENV: 'development'
+    environment:
+      DATABASE_URL: 'postgres://klicker:klicker@postgres:5432/main'
+      APP_SECRET: 'abcd'
+      REDIS_HOST: 'redis_exec'
+      REDIS_PORT: 6379
+      REDIS_CACHE_HOST: 'redis_cache'
+      REDIS_CACHE_PORT: 6379
+      API_DOMAIN: '127.0.0.1'
+      COOKIE_DOMAIN: '127.0.0.1'
+    ports:
+      - 3000:3000
+    networks:
+      - klicker
 
 networks:
   klicker:
