--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -21,7 +21,7 @@
     "check": "tsc --noEmit"
   },
   "engines": {
-    "node": ">=18"
+    "node": "=18"
   },
   "size-limit": [
     {
@@ -33,9 +33,6 @@
       "limit": "10 KB"
     }
   ],
-  "peerDependencies": {
-    "graphql-yoga": "^3.6.0"
-  },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/fragment-matcher": "5.0.0",
@@ -53,7 +50,6 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
-    "@types/mathjs": "^9.4.2",
     "@types/node": "^18.17.3",
     "@types/node-schedule": "^2.1.0",
     "@types/validator": "^13.9.0",
@@ -79,12 +75,12 @@
     "@pothos/plugin-scope-auth": "3.20.0",
     "@pothos/plugin-validation": "3.9.2",
     "bcryptjs": "2.4.3",
-    "dayjs": "1.11.7",
+    "dayjs": "1.11.9",
     "generate-password": "1.7.0",
     "graphql": "16.7.1",
     "graphql-scalars": "1.22.2",
     "jsonwebtoken": "9.0.1",
-    "mathjs": "11.8.0",
+    "mathjs": "11.9.1",
     "node-schedule": "2.1.1",
     "ramda": "0.29.0",
     "uuid": "9.0.0",
