--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -50,8 +50,11 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.17.3",
     "@types/node-schedule": "^2.1.0",
+    "@types/ramda": "^0.29.3",
+    "@types/uuid": "^9.0.2",
     "@types/validator": "^13.9.0",
     "@types/web-push": "^3.3.2",
     "dotenv": "16.0.3",
@@ -79,6 +82,7 @@
     "generate-password": "1.7.0",
     "graphql": "16.7.1",
     "graphql-scalars": "1.22.2",
+    "graphql-yoga": "3.9.1",
     "jsonwebtoken": "9.0.1",
     "mathjs": "11.9.1",
     "node-schedule": "2.1.1",
