--- a/apps/frontend-manage/.dockerignore
+++ b/apps/frontend-manage/.dockerignore
@@ -1,12 +1,14 @@
+.**
+
+__**
+
+cypress/
+deploy/
+docs/
+legacy/
+newsletter/
+**/.next/
+**/node_modules/
+util/
+
 Dockerfile
-.dockerignore
-node_modules/
-npm-debug.log
-README.md
-.next/
-.git/
-.vercel/
-.turbo/
-.env.local
-.env.local.template
-public/avatars/
