--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -221,18 +221,20 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: |
-            ~/.npm
+            ~/.pnpm
+            ${{ github.workspace }}/apps/auth/.next/cache
             ${{ github.workspace }}/apps/frontend-pwa/.next/cache
             ${{ github.workspace }}/apps/frontend-manage/.next/cache
             ${{ github.workspace }}/apps/frontend-control/.next/cache
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
 
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.12
 
       # - name: Install azure-functions-core-tools
       #   run: npm i -g azure-functions-core-tools@4 --unsafe-perm true
@@ -249,9 +251,9 @@ jobs:
       - name: Apply migrations and seed the database
         run: |
           cd packages/prisma
-          npm run build
-          npm run prisma:reset:raw -- -f
-          npm run seed:test
+          pnpm run build
+          pnpm run prisma:reset:raw -- -f
+          pnpm run seed:test
         env:
           DATABASE_URL: postgres://klicker:klicker@localhost:5432/main
 
@@ -260,7 +262,7 @@ jobs:
         timeout-minutes: 20
         with:
           install: false
-          start: npm run start:test
+          start: pnpm run start:test
           wait-on: 'http://127.0.0.1:3000/api/graphql, http://127.0.0.1:3001, http://127.0.0.1:3002, http://127.0.0.1:3003, http://127.0.0.1:3010'
           wait-on-timeout: 120
           record: true
