--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -7,6 +7,8 @@
     "dev:offline": "next dev --port 3010",
     "build": "next build",
     "build:test": "cross-env NODE_ENV=test next build",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "start": "next start --port 3010",
     "start:test": "cross-env NODE_ENV=test npm start",
     "lint": "next lint"
@@ -24,6 +26,9 @@
     "eslint-config-next": "13.4.13",
     "postcss": "8.4.27",
     "postcss-import": "15.1.0",
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-tailwindcss": "0.3.0",
     "prisma": "4.14.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
