--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -235,6 +235,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8.6.12
+          run_install: true
 
       # - name: Install azure-functions-core-tools
       #   run: npm i -g azure-functions-core-tools@4 --unsafe-perm true
