--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -34,6 +34,8 @@
     "@types/node": "^18.17.3",
     "@types/ramda": "^0.29.0",
     "jest": "29.5.0",
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
     "size-limit": "8.2.4",
     "ts-jest": "29.1.0",
     "tsup": "6.7.0",
