--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -63,6 +63,8 @@
     "ioredis": "5.3.2",
     "jest": "29.5.0",
     "npm-run-all": "4.1.5",
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
     "size-limit": "8.2.4",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
