--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -36,6 +36,8 @@
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.17.3",
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
     "size-limit": "8.2.4",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
