--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -54,6 +54,9 @@
     "autoprefixer": "10.4.14",
     "npm-run-all": "4.1.5",
     "postcss-import": "15.1.0",
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-tailwindcss": "0.3.0",
     "size-limit": "8.2.4",
     "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
