--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -45,7 +45,9 @@
     "formik": "2.4.3",
     "npm-run-all": "4.1.5",
     "postcss-import": "15.1.0",
-    "prettier-plugin-tailwindcss": "0.4.1",
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
+    "prettier-plugin-tailwindcss": "0.3.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-radix": "2.8.0",
     "typescript": "5.0.4"
