--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -44,6 +44,7 @@
     "jest": "29.5.0",
     "nodemon": "2.0.22",
     "npm-run-all": "4.1.5",
+    "nyc": "15.1.0",
     "prisma": "4.14.1",
     "tsup": "6.7.0",
     "typescript": "5.0.4"
