--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -61,6 +61,7 @@
     "@types/web-push": "^3.3.2",
     "autoprefixer": "10.4.14",
     "babel-loader": "8.2.5",
+    "cross-env": "7.0.3",
     "cssnano": "6.0.1",
     "eslint-config-next": "13.4.13",
     "postcss": "8.4.23",
