check depends on ^build of related packages (e.g., check graphql based on prisma types as well)

--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,9 @@
       "outputMode": "errors-only"
     },
     "check": {
-      "outputMode": "errors-only"
+      "cache": false,
+      "outputMode": "errors-only",
+      "dependsOn": ["^build"]
     },
     "build": {
       "dependsOn": ["^build"],
