shared next-config package

--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -4,3 +4,5 @@ EDUID_CLIENT_ID=uzh_klicker_auth
 EDUID_WELL_KNOWN=https://login.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid
 NEXT_PUBLIC_DEFAULT_REDIRECT=http://manage.klicker.uzh.ch
+S3_PATHNAME="/klicker-prod/**"
+S3_HOSTNAME="sos-ch-dk-2.exo.io"
