--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -4,3 +4,5 @@ EDUID_CLIENT_ID=uzh_klicker_auth_dev
 EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid-test
 NEXT_PUBLIC_DEFAULT_REDIRECT=http://manage.klicker.local
+S3_PATHNAME="/klicker-prod/**"
+S3_HOSTNAME="sos-ch-dk-2.exo.io"
