--- a/apps/auth/.env.test
+++ b/apps/auth/.env.test
@@ -6,3 +6,5 @@ NEXT_PUBLIC_EDUID_ID=eduid-test
 NEXT_PUBLIC_DEFAULT_REDIRECT=http://127.0.0.1:3002
 DATABASE_URL=postgres://klicker:klicker@localhost:5432/main
 APP_SECRET=abcd
+S3_PATHNAME="/klicker-prod/**"
+S3_HOSTNAME="sos-ch-dk-2.exo.io"
