--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
+    "@klicker-uzh/next-config": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
     "@sentry/nextjs": "7.61.1",
