--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
+    "@klicker-uzh/next-config": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
     "@radix-ui/react-tabs": "1.0.3",
