--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -25,6 +25,7 @@
     "@uzh-bf/design-system": "2.0.7",
     "formik": "2.4.3",
     "next": "13.4.13",
+    "next-intl": "2.19.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "1.14.0",
