--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -82,6 +82,7 @@
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "dotenv-cli": "7.2.1",
+    "mongoose": "7.3.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
@@ -91,10 +92,12 @@
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
     "typescript": "5.1.6",
-    "uuidv4": "6.2.13",
-    "mongoose": "7.3.3"
+    "uuidv4": "6.2.13"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.388.0",
+    "@aws-sdk/credential-provider-node": "3.388.0",
+    "@azure/storage-blob": "12.15.0",
     "@prisma/client": "4.14.1"
   },
   "volta": {
