delete participant account with modal, no-account cookie after deletion

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -26,6 +26,7 @@
     "prisma.prisma",
     "wix.glean",
     "wix.vscode-import-cost",
-    "yzhang.markdown-all-in-one"
+    "yzhang.markdown-all-in-one",
+    "stivo.tailwind-fold"
   ]
 }
