--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -15,8 +15,10 @@
     "build:tw:components": "tailwindcss -i src/components.css -o src/public/components.css",
     "build:tw:utilities": "tailwindcss -i src/utilities.css -o src/public/utilities.css",
     "build:ts": "NODE_ENV=production tsup",
-    "//dev": "run-p dev:tailwind dev:ts",
-    "dev:tailwind": "tailwindcss -i src/globals.css -o src/public/tailwind.css -w",
+    "dev": "run-p dev:tw:* dev:ts",
+    "dev:offline": "npm run dev",
+    "dev:tw:components": "tailwindcss -w -i src/components.css -o src/public/components.css",
+    "dev:tw:utilities": "tailwindcss -w -i src/utilities.css -o src/public/utilities.css",
     "dev:ts": "NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
