--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -1,6 +1,6 @@
 COOKIE_DOMAIN=klicker.local
 API_DOMAIN=api.klicker.local
-S3_PATHNAME="/klicker-prod/**"
+S3_PATHNAME="/klicker-uzh-dev/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
