--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -37,6 +37,7 @@
     "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
     "formik": "2.4.3",
+    "generate-password": "1.7.0",
     "graphql": "16.6.0",
     "graphql-ws": "5.13.1",
     "jsonwebtoken": "9.0.1",
