--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "dev": "npm-run-all --parallel dev:build dev:run",
-    "dev:offline": "npm-run-all --parallel dev:build dev:run",
+    "dev:offline": "npm run dev",
     "dev:build": "tsup --watch",
     "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node -r dotenv/config ./dist/index.js'",
     "build": "cross-env NODE_ENV=production tsup",
