--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,7 +13,6 @@
     "github.vscode-pull-request-github",
     "graphql.vscode-graphql-syntax",
     "graphql.vscode-graphql",
-    "heybourn.headwind",
     "jakewilson.vscode-placeholder-images",
     "jetpack-io.devbox",
     "mikestead.dotenv",
@@ -27,6 +26,7 @@
     "prisma.prisma",
     "wix.glean",
     "wix.vscode-import-cost",
-    "yzhang.markdown-all-in-one"
+    "yzhang.markdown-all-in-one",
+    "stivo.tailwind-fold"
   ]
 }
