--- a/apps/frontend-control/.env.development
+++ b/apps/frontend-control/.env.development
@@ -1,13 +1,11 @@
 COOKIE_DOMAIN=klicker.local
 API_DOMAIN=api.klicker.local
-S3_PATHNAME="/klicker-prod/**"
+S3_PATHNAME="/klicker-uzh-dev/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
 NEXT_PUBLIC_API_URL="http://api.klicker.local/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=http://127.0.0.1:3000/api/graphql
-
-APP_SECRET=abcd
 
 NEXT_PUBLIC_PWA_URL="http://pwa.klicker.local"
 NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.local"
