--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -4,23 +4,26 @@
   "version": "3.0.0-alpha.82",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/"
   ],
   "scripts": {
-    "build": "cross-env NODE_ENV=production tsup",
-    "dev:ts": "tsup --watch",
-    "dev:func": "func start -p 7073",
+    "build": "cross-env NODE_ENV=production tsc",
+    "clean": "rimraf dist",
+    "prestart": "npm run clean && npm run build",
+    "dev": "npm-run-all --parallel dev:ts dev:func",
+    "dev:ts": "tsc -w",
+    "dev:func": "func start -p 7073 --verbose",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "func start -p 7073",
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@azure/functions": "4.0.0-alpha.10",
-    "@klicker-uzh/grading": "^3.0.0-alpha.0",
+    "@azure/functions": "^4.0.0-alpha.7",
+    "@klicker-uzh/grading": "^3.0.0-alpha.82",
     "@sentry/node": "7.52.1",
+    "@tsconfig/node18": "^2.0.0",
     "ioredis": "5.3.2",
     "jsonwebtoken": "9.0.0",
     "md5": "2.3.0",
@@ -34,12 +37,12 @@
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.29.0",
     "@uzh-bf/design-system": "1.7.1",
+    "rimraf": "^5.0.0",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
     "ts-node": "10.9.1",
-    "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
   "volta": {
