--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -2,38 +2,39 @@
   "private": true,
   "name": "@klicker-uzh/backend-responses",
   "version": "3.0.0-alpha.82",
+  "type": "module",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/"
   ],
   "scripts": {
-    "build": "cross-env NODE_ENV=production tsup",
-    "dev:ts": "tsup --watch",
-    "dev:func": "func start -p 7072",
+    "build": "cross-env NODE_ENV=production tsc",
+    "dev": "npm-run-all --parallel dev:ts dev:func",
+    "dev:ts": "tsc -w",
+    "dev:func": "func start -p 7072 --verbose",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "func start -p 7072",
     "check": "tsc --noEmit"
   },
   "dependencies": {
+    "@azure/functions": "^4.0.0-alpha.7",
     "@azure/service-bus": "7.9.0",
     "@sentry/node": "7.52.1",
     "jsonwebtoken": "9.0.0"
   },
   "devDependencies": {
-    "@azure/functions": "3.5.1",
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.0.0",
     "@uzh-bf/design-system": "1.7.1",
     "cross-env": "7.0.3",
+    "dotenv": "16.0.3",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
     "ts-node": "10.9.1",
-    "tsup": "6.7.0",
     "typescript": "5.0.4"
   },
   "volta": {
