--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
       "isBackground": true,
       "dependsOn": "npm build (serverless)",
       "options": {
-        "cwd": "${workspaceFolder}/apps/backend-response-v4"
+        "cwd": "${workspaceFolder}/apps/backend-responses"
       }
     },
     {
@@ -18,7 +18,7 @@
       "dependsOn": "npm install (serverless)",
       "problemMatcher": "$tsc",
       "options": {
-        "cwd": "${workspaceFolder}/apps/backend-response-v4"
+        "cwd": "${workspaceFolder}/apps/backend-responses"
       }
     },
     {
@@ -26,7 +26,7 @@
       "label": "npm install (serverless)",
       "command": "npm install",
       "options": {
-        "cwd": "${workspaceFolder}/apps/backend-response-v4"
+        "cwd": "${workspaceFolder}/apps/backend-responses"
       }
     },
     {
@@ -36,7 +36,7 @@
       "dependsOn": "npm build (serverless)",
       "problemMatcher": [],
       "options": {
-        "cwd": "${workspaceFolder}/apps/backend-response-v4"
+        "cwd": "${workspaceFolder}/apps/backend-responses"
       }
     }
   ]
