--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -20,10 +20,9 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0-alpha.7",
+    "@azure/functions": "4.0.0-alpha.11",
     "@klicker-uzh/grading": "workspace:*",
     "@sentry/node": "7.52.1",
-    "@tsconfig/node18": "^2.0.0",
     "ioredis": "5.3.2",
     "jsonwebtoken": "9.0.1",
     "md5": "2.3.0",
