--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -12,8 +12,8 @@
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "dev": "npm-run-all --parallel dev:ts dev:func",
-    "dev:ts": "tsc -w",
-    "dev:func": "func start -p 7073 --verbose",
+    "dev:ts": "tsup --watch",
+    "dev:func": "func start -p 7073 --verbose --javascript",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "func start -p 7073",
@@ -37,12 +37,13 @@
     "@types/ramda": "^0.29.0",
     "@uzh-bf/design-system": "2.0.12",
     "azure-functions-core-tools": "4.0.5198",
-    "rimraf": "^5.0.0",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
+    "rimraf": "^5.0.0",
     "ts-node": "10.9.1",
+    "tsup": "7.2.0",
     "typescript": "5.0.4"
   },
   "volta": {
