--- a/apps/backend-responses/local.settings.template
+++ b/apps/backend-responses/local.settings.template
@@ -1,18 +1,17 @@
 {
   "IsEncrypted": false,
   "Values": {
-    "APP_SECRET": "abcd",
     "NODE_ENV": "development",
-    "AzureWebJobsStorage": "",
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
     "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
     "SERVICE_BUS_CONNECTION_STRING": "",
-    "SERVICE_BUS_QUEUE_NAME": "q-dev"
+    "SERVICE_BUS_QUEUE_NAME": ""
   },
   "Host": {
-    "CORS": "http://127.0.0.1:3001",
+    "CORS": "http://pwa.klicker.local",
     "CORSCredentials": true
   }
 }
