--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production tsc",
     "dev": "npm-run-all --parallel dev:ts dev:func",
-    "dev:ts": "tsc -w",
-    "dev:func": "func start -p 7072 --verbose",
+    "dev:ts": "tsup --watch",
+    "dev:func": "func start -p 7072 --verbose --javascript",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "func start -p 7072",
@@ -35,6 +35,7 @@
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
     "ts-node": "10.9.1",
+    "tsup": "7.2.0",
     "typescript": "5.0.4"
   },
   "volta": {
