--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -5,7 +5,7 @@ S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
 NEXT_PUBLIC_IMAGE_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/img"
-NEXT_PUBLIC_ADD_RESPONSE_URL="http://127.0.0.1:7072/api/AddResponse"
+NEXT_PUBLIC_ADD_RESPONSE_URL="http://func-responses.klicker.local/api/AddResponse"
 NEXT_PUBLIC_API_URL="http://api.klicker.local/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=http://127.0.0.1:3000/api/graphql
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BKgVsZFXdusxzKMrOTIJiAtiou8STnRcwbv_nvlseghjAUAlfmWKpCKBcfY_D-DH9PPYBunrJRh4uNeNF7a3TU4"
