--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -79,6 +79,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^18.17.4",
     "@types/ramda": "^0.29.3",
+    "axios": "1.4.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "dotenv-cli": "7.2.1",
@@ -95,8 +96,6 @@
     "uuidv4": "6.2.13"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.388.0",
-    "@aws-sdk/credential-provider-node": "3.388.0",
     "@azure/storage-blob": "12.15.0",
     "@prisma/client": "4.14.1"
   },
