--- a/.github/workflows/v3_klickeruzhprod-responses(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-responses(qa).yml
@@ -3,15 +3,15 @@ name: Build and deploy backend-responses to Azure Function App (QA)
 on:
   push:
     branches:
-      - "v3"
+      - 'v3'
     paths:
-      - "apps/backend-responses/**"
-      - ".github/workflows/v3_klickeruzhprod-responses**"
+      - 'apps/backend-responses/**'
+      - '.github/workflows/v3_klickeruzhprod-responses**'
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-responses' # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-responses'
+  NODE_VERSION: '18.x'
 
 jobs:
   build-and-deploy:
@@ -25,15 +25,17 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.12
+          run_install: true
+
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
-          rm package.json
-          rm package-lock.json
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install --package-lock=false
-          npm run build --if-present
-          npm prune --omit=dev
+          pn run build
+          pn prune --prod
           popd
 
       - name: 'Run Azure Functions Action'
