--- a/.github/workflows/v3_klickeruzhprod-responses.yml
+++ b/.github/workflows/v3_klickeruzhprod-responses.yml
@@ -2,12 +2,12 @@ name: Build and deploy backend-responses to Azure Function App (Production)
 
 on:
   push:
-    tags: [ 'v*.*.*' ]
+    tags: ['v*.*.*']
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-responses' # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'apps/backend-responses'
+  NODE_VERSION: '18.x'
 
 jobs:
   build-and-deploy:
@@ -21,15 +21,17 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.12
+          run_install: true
+
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
-          rm package.json
-          rm package-lock.json
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install --package-lock=false
-          npm run build --if-present
-          npm prune --omit=dev
+          pn run build
+          pn prune --prod
           popd
 
       - name: 'Run Azure Functions Action'
