enhance: migrate azure functions to v4 (#3653)
Co-authored-by: Roland Schlaefli <roland.schlaefli@bf.uzh.ch>
Co-authored-by: Roland Schlaefli <rolandschlaefli@gmail.com>

--- a/apps/backend-response-processor/tsconfig.json
+++ b/apps/backend-response-processor/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["ProcessResponses"],
-  "compilerOptions": {
-    "module": "ESNext"
-  }
+  "extends": [
+    "@tsconfig/node18/tsconfig.json",
+    "@tsconfig/recommended/tsconfig.json"
+  ],
+  "include": ["src/**/*"]
 }
