--- a/apps/backend-response-processor/.gitignore
+++ b/apps/backend-response-processor/.gitignore
@@ -1,8 +1,3 @@
-*.log
-.DS_Store
-node_modules
-dist
-
 # Logs
 logs
 *.log
@@ -103,6 +98,4 @@ __blobstorage__
 __queuestorage__
 __azurite_db*__.json
 
-prisma/client
-
-src/
+src/**.js
