--- a/apps/backend-response-processor/local.settings.template
+++ b/apps/backend-response-processor/local.settings.template
@@ -2,18 +2,12 @@
   "IsEncrypted": false,
   "Values": {
     "NODE_ENV": "development",
-    "AzureWebJobsStorage": "",
+    "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "node",
     "FUNCTIONS_EXTENSION_VERSION": "~4",
     "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
-    "APP_SECRET": "abcd",
-    "REDIS_HOST": "localhost",
-    "REDIS_PORT": 6379,
+    "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
     "SERVICE_BUS_CONNECTION_STRING": "",
-    "SERVICE_BUS_QUEUE_NAME": "q-dev"
-  },
-  "Host": {
-    "CORS": "http://127.0.0.1:3001",
-    "CORSCredentials": true
+    "SERVICE_BUS_QUEUE_NAME": ""
   }
 }
