--- a/apps/backend-responses/package.json
+++ b/apps/backend-responses/package.json
@@ -4,39 +4,41 @@
   "version": "3.0.0-beta.4",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/"
   ],
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
+    "prestart": "npm run build",
     "dev": "npm-run-all --parallel dev:ts dev:func",
     "dev:ts": "tsup --watch",
-    "dev:func": "func start -p 7072",
+    "dev:func": "func start -p 7072 --verbose --javascript",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "func start -p 7072",
     "check": "tsc --noEmit"
   },
   "dependencies": {
+    "@azure/functions": "4.0.0-alpha.11",
     "@azure/service-bus": "7.9.0",
     "@sentry/node": "7.52.1",
     "jsonwebtoken": "9.0.1"
   },
   "devDependencies": {
-    "@azure/functions": "3.5.1",
-    "@tsconfig/node18": "^2.0.0",
-    "@tsconfig/recommended": "^1.0.2",
+    "@tsconfig/node18": "18.2.0",
+    "@tsconfig/recommended": "1.0.2",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.11.9",
     "@uzh-bf/design-system": "2.0.12",
-    "azure-functions-core-tools": "4.0.5198",
+    "azure-functions-core-tools": "4.0.5274",
     "cross-env": "7.0.3",
+    "dotenv": "16.0.3",
     "husky": "8.0.3",
     "npm-run-all": "4.1.5",
-    "ts-node": "10.9.1",
-    "tsup": "6.7.0",
-    "typescript": "5.0.4"
+    "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "3.2.2",
+    "tsup": "7.2.0",
+    "typescript": "5.1.6"
   },
   "volta": {
     "extends": "../../package.json"
