--- a/apps/backend-responses/tsconfig.json
+++ b/apps/backend-responses/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["AddResponse"],
-  "compilerOptions": {
-    "module": "ESNext"
-  }
+  "extends": [
+    "@tsconfig/node18/tsconfig.json",
+    "@tsconfig/recommended/tsconfig.json"
+  ],
+  "include": ["src/**/*"]
 }
