fix(packages/lti): add cross-env to enable build on windows

--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -9,8 +9,8 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "build": "NODE_ENV=production tsup",
-    "build:watch": "NODE_ENV=development tsup --watch",
+    "build": "cross-env NODE_ENV=production tsup",
+    "build:watch": "cross-env NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "size": "size-limit",
@@ -36,6 +36,7 @@
     "@tsconfig/node18": "^2.0.0",
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.17.3",
+    "cross-env": "7.0.3",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
     "size-limit": "8.2.4",
