chore(ci): rename function app deployments to trigger build

--- a/.github/workflows/v3_klickeruzhprod-response-processor.yml
+++ b/.github/workflows/v3_klickeruzhprod-response-processor.yml
@@ -1,4 +1,4 @@
-name: Build and deploy backend-response-processor to Azure Function App (Production)
+name: Build and deploy backend-response-processor Function App (Production)
 
 on:
   push:
