--- a/.github/workflows/v3_klickeruzhprod-response-processor(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-response-processor(qa).yml
@@ -1,4 +1,4 @@
-name: Build and deploy backend-response-processor to Azure Function App (QA)
+name: Build and deploy backend-response-processor Function App (QA)
 
 on:
   push:
