--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -9,8 +9,8 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "build": "NODE_ENV=production tsup",
-    "dev": "NODE_ENV=development tsup --watch",
+    "build": "cross-env NODE_ENV=production tsup",
+    "dev": "cross-env NODE_ENV=development tsup --watch",
     "dev:offline": "npm run dev",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -34,6 +34,7 @@
     "@types/jest": "^29.0.2",
     "@types/node": "^18.17.3",
     "@types/ramda": "^0.29.0",
+    "cross-env": "7.0.3",
     "jest": "29.5.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
