--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -11,10 +11,10 @@
     "analyze": "size-limit --why",
     "generate": "graphql-codegen --config codegen.ts",
     "build": "run-s generate build:ts",
-    "build:ts": "NODE_ENV=production tsup --dts",
+    "build:ts": "cross-env NODE_ENV=production tsup --dts",
     "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:offline": "npm run dev",
-    "dev:ts": "NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
+    "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -58,6 +58,7 @@
     "@types/uuid": "^9.0.2",
     "@types/validator": "^13.9.0",
     "@types/web-push": "^3.3.2",
+    "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "graphql-codegen-persisted-query-ids": "0.1.2",
     "husky": "8.0.3",
