--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -14,12 +14,12 @@
     "build:tw": "run-p build:tw:*",
     "build:tw:components": "tailwindcss -i src/components.css -o src/public/components.css",
     "build:tw:utilities": "tailwindcss -i src/utilities.css -o src/public/utilities.css",
-    "build:ts": "NODE_ENV=production tsup",
+    "build:ts": "cross-env NODE_ENV=production tsup",
     "dev": "run-p dev:tw:* dev:ts",
     "dev:offline": "npm run dev",
     "dev:tw:components": "tailwindcss -w -i src/components.css -o src/public/components.css",
     "dev:tw:utilities": "tailwindcss -w -i src/utilities.css -o src/public/utilities.css",
-    "dev:ts": "NODE_ENV=development tsup --watch",
+    "dev:ts": "cross-env NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "size": "size-limit",
@@ -54,6 +54,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
+    "cross-env": "7.0.3",
     "npm-run-all": "4.1.5",
     "postcss-import": "15.1.0",
     "prettier": "2.8.8",
