--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -10,9 +10,9 @@
   "scripts": {
     "analyze": "size-limit --why",
     "build": "run-s generate build:ts build:copy",
-    "build:ts": "NODE_ENV=production tsup",
+    "build:ts": "cross-env NODE_ENV=production tsup",
     "build:copy": "node src/copy.js",
-    "build:watch": "NODE_ENV=development tsup --watch",
+    "build:watch": "cross-env NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
@@ -79,6 +79,7 @@
     "@types/node": "^18.17.4",
     "@types/ramda": "^0.29.3",
     "bcryptjs": "2.4.3",
+    "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "dotenv-cli": "7.2.1",
     "npm-run-all": "4.1.5",
