chore(ci): rename functions workflow to trigger build

--- a/.github/workflow_drafts/v2_klickeruzhprod-graphql(qa).yml
+++ b/.github/workflow_drafts/v2_klickeruzhprod-graphql(qa).yml
@@ -1,4 +1,4 @@
-name: Build and deploy backend-sls to Azure Function App (QA)
+name: Build and deploy backend-sls to Function App (QA)
 
 on:
   push:
