--- a/.github/workflows/v3_klickeruzhprod-responses(qa).yml
+++ b/.github/workflows/v3_klickeruzhprod-responses(qa).yml
@@ -1,4 +1,4 @@
-name: Build and deploy backend-responses to Azure Function App (QA)
+name: Build and deploy backend-responses to Function App (QA)
 
 on:
   push:
