--- a/.github/workflows/v3_klickeruzhprod-responses.yml
+++ b/.github/workflows/v3_klickeruzhprod-responses.yml
@@ -1,4 +1,4 @@
-name: Build and deploy backend-responses to Azure Function App (Production)
+name: Build and deploy backend-responses to Function App (Production)
 
 on:
   push:
