--- a/.github/workflows/v3_klickeruzhprod-response-processor.yml
+++ b/.github/workflows/v3_klickeruzhprod-response-processor.yml
@@ -29,7 +29,7 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
-          pnpm run build
+          pnpm run build --scope @klicker-uzh/backend-response-processor
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           pnpm prune --prod
           popd
