fix: only on tsconfig with ts-node currently allowed

--- a/packages/migration-v3-import/tsconfig.json
+++ b/packages/migration-v3-import/tsconfig.json
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "@tsconfig/recommended/tsconfig.json",
-    "@tsconfig/node18/tsconfig.json"
-  ],
+  "extends": "@tsconfig/node18/tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
     "module": "ESNext",
