--- a/packages/migration-v3-import/tsconfig.json
+++ b/packages/migration-v3-import/tsconfig.json
@@ -2,13 +2,9 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ESNext"
+    "baseUrl": "."
   },
   "ts-node": {
-    "transpileOnly": true,
-    "moduleTypes": {
-      "src/*": "esm"
-    }
+    "transpileOnly": true
   }
 }
