--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
-    "module": "ESNext"
+    "baseUrl": "."
   },
   "ts-node": {
     "transpileOnly": true,
