--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -9,11 +9,11 @@
   ],
   "scripts": {
     "dev": "npm-run-all --parallel dev:build dev:run",
-    "dev:offline": "npm run dev",
+    "dev:offline": "pnpm run dev",
     "dev:build": "tsup --watch",
     "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node -r dotenv/config ./dist/index.js'",
     "build": "cross-env NODE_ENV=production tsup",
-    "build:test": "npm run build",
+    "build:test": "pnpm run build",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "node -r dotenv/config dist/index.js",
