--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -16,7 +16,7 @@
     "build:tw:utilities": "tailwindcss -i src/utilities.css -o src/public/utilities.css",
     "build:ts": "cross-env NODE_ENV=production tsup",
     "dev": "run-p dev:tw:* dev:ts",
-    "dev:offline": "npm run dev",
+    "dev:offline": "pnpm run dev",
     "dev:tw:components": "tailwindcss -w -i src/components.css -o src/public/components.css",
     "dev:tw:utilities": "tailwindcss -w -i src/utilities.css -o src/public/utilities.css",
     "dev:ts": "cross-env NODE_ENV=development tsup --watch",
