--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -21,23 +21,23 @@
     "prisma:migrate": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma",
     "prisma:migrate:create": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma --create-only",
     "prisma:deploy:raw": "prisma migrate deploy --schema=src/prisma/schema.prisma",
-    "prisma:deploy": "doppler run --config dev -- npm run prisma:deploy:raw",
-    "prisma:deploy:qa": "doppler run --config stg -- npm run prisma:deploy:raw",
-    "prisma:deploy:prod": "doppler run --config prd -- npm run prisma:deploy:raw",
+    "prisma:deploy": "doppler run --config dev -- pnpm run prisma:deploy:raw",
+    "prisma:deploy:qa": "doppler run --config stg -- pnpm run prisma:deploy:raw",
+    "prisma:deploy:prod": "doppler run --config prd -- pnpm run prisma:deploy:raw",
     "prisma:resolve:prod": "doppler run --config prd -- prisma migrate resolve --schema=src/prisma/schema.prisma",
     "prisma:push:raw": "prisma db push --schema=src/prisma/schema.prisma",
-    "prisma:push": "doppler run --config dev -- npm run prisma:push:raw",
-    "prisma:push:qa": "doppler run --config stg -- npm run prisma:push:raw",
+    "prisma:push": "doppler run --config dev -- pnpm run prisma:push:raw",
+    "prisma:push:qa": "doppler run --config stg -- pnpm run prisma:push:raw",
     "prisma:reset:raw": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
-    "prisma:reset": "doppler run --config dev -- npm run prisma:reset:raw",
-    "prisma:resetCypress": "npm run prisma:reset:raw",
+    "prisma:reset": "doppler run --config dev -- pnpm run prisma:reset:raw",
+    "prisma:resetCypress": "pnpm run prisma:reset:raw",
     "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma",
-    "prisma:reset:qa": "doppler run --config stg -- npm run prisma:reset:raw",
+    "prisma:reset:qa": "doppler run --config stg -- pnpm run prisma:reset:raw",
     "prisma:setup": "run-s prisma:reset prisma:push seed",
     "prisma:studio:raw": "prisma studio --schema=src/prisma/schema.prisma",
-    "prisma:studio": "doppler run --config dev -- npm run prisma:studio:raw",
-    "prisma:studio:qa": "doppler run --config stg -- npm run prisma:studio:raw",
-    "prisma:studio:prod": "doppler run --config prd -- npm run prisma:studio:raw",
+    "prisma:studio": "doppler run --config dev -- pnpm run prisma:studio:raw",
+    "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
+    "prisma:studio:prod": "doppler run --config prd -- pnpm run prisma:studio:raw",
     "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
     "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
     "seed:achievements": "ENV=development doppler run --config dev -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
@@ -48,7 +48,7 @@
     "seed:prod": "ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
     "seed:prod:bf1": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF1.ts",
     "seed:prod:bf2": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedBF2.ts",
-    "seed:prod:ami": "npm run seed:qa:ami",
+    "seed:prod:ami": "pnpm run  seed:qa:ami",
     "seed:prod:achievements": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedAchievements.ts",
     "seed:prod:summerSchool": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedSummerSchool.ts",
     "seed:prod:user": "ENV=production doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/seedUser.ts",
@@ -56,11 +56,10 @@
     "seed:prod:importQuestions": "cp ../../legacy/db/exported_questions.json ./src/data/exported_questions.json && ENV=development doppler run --config prd -- ts-node --esm --experimental-specifier-resolution=node src/data/importQuestions.ts",
     "seed:mockExamPoints": "ENV=production doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/parseMockExamPoints.ts",
     "size": "size-limit",
-    "check": "tsc --noEmit",
-    "import": "doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/importV2Data.ts"
+    "check": "tsc --noEmit"
   },
   "prisma": {
-    "seed": "npm run seed"
+    "seed": "pnpm run  seed"
   },
   "engines": {
     "node": "=18"
@@ -84,7 +83,6 @@
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "dotenv-cli": "7.2.1",
-    "mongoose": "7.3.3",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.2",
@@ -97,7 +95,6 @@
     "uuidv4": "6.2.13"
   },
   "dependencies": {
-    "@azure/storage-blob": "12.15.0",
     "@prisma/client": "4.14.1"
   },
   "volta": {
